cmake_minimum_required(VERSION 3.21)
project(Assignment3)

set(CMAKE_CXX_STANDARD 14)

add_executable(Assignment3 main.cpp)
add_executable(dm_simulator dm_simulator.cpp)
add_executable(example example.cpp)
add_executable(example2 example2.cpp)
add_executable(example3 example3.cpp)
add_executable(example4 example4.cpp)
add_executable(example5 example5.cpp)
add_executable(example6 example6.cpp)
add_executable(pointers pointers.cpp)