cmake_minimum_required(VERSION 3.21)
project(CS207)

set(CMAKE_CXX_STANDARD 14)

add_executable(main main.cpp)
add_executable(CtoF CtoF.cpp)
add_executable(demo demo.cpp)
add_executable(exercises exercises.cpp)
add_executable(ex5 ex5.cpp)
add_executable(ex6 ex6.cpp)
add_executable(ex7 ex7.cpp)
add_executable(exercise_1 exercise_1.cpp)
add_executable(exercise_2 exercise_2.cpp)
add_executable(exercise_3 exercise_3.cpp)
add_executable(class_9feb class_9feb.cpp)
add_executable(class_16feb class_16feb.cpp)
add_executable(class_20feb class_20feb.cpp)
add_executable(Ex4 Ex4.cpp)